[error]: error in the UserService::getUserById

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,6 +76,9 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "pqxx": "cpp",
-        "*.ipp": "cpp"
+        "*.ipp": "cpp",
+        "forward_list": "cpp",
+        "ranges": "cpp",
+        "valarray": "cpp"
     }
 }
